quobyte/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: gateway-tls

    - name: http-8080
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: hubble-relay
      port: 4245
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
