quobyte/gateway/httproute-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "hubble.quobyte-test.lab"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
