quobyte/gateway/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quobyte-s3
  namespace: quobyte
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "s3.quobyte-test.lab"
    - "*.quobyte-test.lab"
  rules:
    - backendRefs:
        - name: quobyte-s3
          port: 80
