quobyte/gateway/httproute-webconsole.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quobyte-webconsole
  namespace: quobyte
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "quobyte.quobyte-test.lab"
  rules:
    - backendRefs:
        - name: quobyte-webui
          port: 8080
